@@ -18,9 +18,13 @@ major = 0
 [PkgVersion]
 [ReadmeFromPod]
 
+[BuildPrereq]
+Test::More          = 0
+Test::Exception     = 0
+parent              = 0
+
 [Prereq]
-parent          = 0
-DBIx::Class     = 0
-Test::More      = 0
-Test::Exception = 0
-Sub::Exporter   = 0
+DBIx::Class         = 0
+Sub::Exporter       = 0
+Lingua::EN::Inflect = 0
+; String::CamelCase = 0
