@@ -6,6 +6,7 @@ use warnings;
 # ABSTRACT: Easily set up join tables with DBIx::Class
 
 use DBIx::Class::Helpers::Util 'get_namespace_parts';
+use Lingua::EN::Inflect ();
 
 BEGIN {
     our $has_camel_case;
@@ -23,6 +24,12 @@ BEGIN {
     }
 }
 
+sub _pluralize {
+   my ($self, $original) = @_;
+   return join q{_}, split /\s+/,
+      Linga::EN::Inflect::PL(join q{ }, split /_/, $original);
+}
+
 sub _defaults {
    my ($self, $params) = @_;
 
@@ -30,7 +37,11 @@ sub _defaults {
    if (_has_camel_case) {
       $params->{left_method}  ||= String::CamelCase::decamelize($params->{left_class});
       $params->{right_method} ||= String::CamelCase::decamelize($params->{right_class});
+      $params->{self_method}  ||= String::CamelCase::decamelize($self);
    }
+   $params->{left_method_plural}  ||= $self->_pluralize($params->{left_method});
+   $params->{right_method_plural} ||= $self->_pluralize($params->{right_method});
+   $params->{self_method_plural}  ||= $self->_pluralize($params->{self_method});
 
    return $params;
 }
@@ -49,6 +60,40 @@ sub generate_primary_key {
 
    $self->_defaults($params);
    $self->set_primary_key("$params->{left_method}_id", "$params->{right_method}_id");
+}
+
+sub generate_has_manys {
+   my ($self, $params) = @_;
+
+   $params = $self->_defaults($params);
+   "$params->{namespace}::$params->{left_class}"->has_many(
+      $params->{self_method} =>
+      $self,
+      "$params->{left_method}_id"
+   );
+
+   "$params->{namespace}::$params->{right_class}"->has_many(
+      $params->{self_method} =>
+      $self,
+      "$params->{right_method}_id"
+   );
+}
+
+sub generate_many_to_manys {
+   my ($self, $params) = @_;
+
+   $params = $self->_defaults($params);
+   "$params->{namespace}::$params->{left_class}"->many_to_many(
+      $params->{right_method_plural} =>
+      $params->{right_class},
+      "$params->{self_method}"
+   );
+
+   "$params->{namespace}::$params->{right_class}"->many_to_many(
+      $params->{left_method_plural} =>
+      $params->{left_class},
+      "$params->{self_method}"
+   );
 }
 
 sub generate_relationships {
@@ -134,11 +179,20 @@ sub add_join_columns {
 All the methods take a configuration hashref that looks like the following:
 
  {
-    left_class   => 'Foo',
-    left_method  => 'foo',   # see L</NOTE>
-    right_class  => 'Bar',
-    right_method => 'bar',   # see L</NOTE>
-    namespace    => 'MyApp', # default is guessed via *::Foo
+    left_class          => 'Foo',
+    left_method         => 'foo',     # see L</NOTE>
+    left_method_plural  => 'foos',    # see L</NOTE>, not required, used for
+                                      # many_to_many rel name in right_class
+                                      # which is not generated by default
+    right_class         => 'Bar',
+    right_method        => 'bar',     # see L</NOTE>
+    right_method_plural => 'bars',    # see L</NOTE>, not required, used for
+                                      # many_to_many rel name in left_class
+                                      # which is not generated by default
+    namespace           => 'MyApp',   # default is guessed via *::Foo
+    self_method         => 'foobars', # not required, used for setting the name of the
+                                      # join table's relationship in a has_many
+                                      # which is not generated by default
  }
 
 =head2 join_table
@@ -150,6 +204,10 @@ columns, set the primary key, and set up the relationships.
 
 Adds two non-nullable integer fields named C<"${left_method}_id"> and
 C<"${right_method}_id"> respectively.
+
+=head2 generate_has_manys
+
+Sets C<"${left_method}_id"> and C<"${right_method}_id"> to be the primary key.
 
 =head2 generate_primary_key
 
@@ -168,4 +226,5 @@ This method sets the table to "${left_class}_${right_class}".
 
 This module uses L<String::CamelCase> to default the method names if it is
 installed.  Currently it fails pod tests, so I'm not making it a requirement.
+Also will use L<Lingua::EN::Inflect> for pluralization.
 
